# MotivationThesis

./: .env  .gitignore  .gitmodules  LICENSE  README.md
analysis/: fuzz_checker.ipynb
angora_results/: run_file.sh  run_gif2png.sh  run_nm.sh  run_objdump.sh  run_size.sh  run_xmlwf.sh
compiler/: CMakeLists.txt
compiler/compiler/: CMakeLists.txt  angora_clang.c  static_analysis_clang.c
executor/: Cargo.toml
executor/forkcli/: Cargo.toml  build.rs
executor/forkcli/src/: fast.rs  forkcli.rs  shm_branches.rs  shm_conds.rs
fuzz_checker/: Pipfile  a.out  cond_stmt.py  cond_stmt_base.py  create_model.py  create_nice_output.py  create_raw_output.py  defs.py  executor.py  forksrv.py  fuzz_checker.ipynb  handler.py  importer.py  logger.py  logs.json  output_parser.py  shm_conds.py  static_parser.py  test.py  trace.py
process_angora_results/: run_djpeg.sh
results/: djpeg_raw.csv  djpeg_raw.xlsx  djpeg_raw_depth.csv  djpeg_raw_depth.xlsx  file_raw.csv  file_raw.xlsx  file_raw_depth.csv  file_raw_depth.xlsx  generate_results.sh  gif2png_raw.csv  gif2png_raw.xlsx  gif2png_raw_depth.csv  gif2png_raw_depth.xlsx  jhead_raw.csv  jhead_raw.xlsx  jhead_raw_depth.csv  jhead_raw_depth.xlsx  results(AutoRecovered).xlsx  results.xlsx  xmlwf_raw.csv
test/: compile_for_framework.sh  postprocess_angora_results.sh  preprocess_angora_results.sh  process_angora_results.sh  run_angora.sh  test-file-1.sh  test-file-2.sh  test-file.sh  test-gif2png.sh  test-jhead.sh  test-libjpeg.sh  test-libpng.sh  test.sh  test_binary.sh
tools/: convert_filename.sh  convert_to_json.sh
(+8662 files in other folders)
