[package]
name = "forkcli"
version = "0.1.0"
authors = ["Luc Veldhuis <laserluc@live.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="runtime_fast"
crate-type = ["staticlib"] # "cdylib"

[dependencies]
libc = "0.2"
lazy_static = "1.1"
byteorder = "1.2"
angora_common = { path = "../common" }
ctor = "0.1.9"
bincode = "1.0"

[build-dependencies]
cc = "1.0"
